fix: prevent button from overflowing

--- a/src/components/ui/button/button.component.scss
+++ b/src/components/ui/button/button.component.scss
@@ -55,6 +55,7 @@
 
 :host {
   display: inline-block;
+  max-width: 100%;
   width: fit-content;
 }
 
